added links and ability to switch md view on the page

--- a/pages/introduction.mdx
+++ b/pages/introduction.mdx
@@ -1,3 +1,5 @@
 ## **Introduction**
 
 GitGud allows you to easily visualize and fully utilize git throughout your projects. It is created using [Ink](https://github.com/vadimdemedes/ink) which provides same component-based UI building experience that React offers, but in CLI (Command Line Interface).
+
+<img width="50%" src="/screenshot_1.jpg" />
