added more functionality parts, added border when hovering cards, did about us page

--- a/pages/functionality.mdx
+++ b/pages/functionality.mdx
@@ -30,6 +30,15 @@
 
   -- Press 'ESC' to exit out of delete branch
 
+- ## Other functionality
+
+  <img width="50%" src="/other.png" />
+  <br />
+  <img width="50%" src="/inside_other.png" />
+
 - ### **Access Full Log Tree**
   -- It will render whole full log tree which is scrollable which shows the tree and commit messages where the \* is on the tree
   -- Press 'ESC' to exit out of log tree
+
+* ### **Stash Changes**
+  -- Will stash all your changes.
