--- a/pages/contribution.mdx
+++ b/pages/contribution.mdx
@@ -5,3 +5,5 @@
   Thanks to [`Joseph Garrone`](#https://github.com/JosephGarrone) for giving us the NPM package name.
 
 <img width="50%" src="/openSource.png" />
+
+- Special thanks to Joseph Garrone for giving us gitgud npm package name!
