changed josh garrone thanks with a link

--- a/pages/contribution.mdx
+++ b/pages/contribution.mdx
@@ -6,4 +6,4 @@
 
 <img width="50%" src="/openSource.png" />
 
-- Special thanks to Joseph Garrone for giving us gitgud npm package name!
+- Thanks to [`Joseph Garrone`](#https://github.com/JosephGarrone) for giving us the NPM package name.
