--- a/pages/introduction.mdx
+++ b/pages/introduction.mdx
@@ -2,4 +2,4 @@
 
 GitGud allows you to easily visualize and fully utilize git throughout your projects. It is created using [Ink](https://github.com/vadimdemedes/ink) which provides same component-based UI building experience that React offers, but in CLI (Command Line Interface).
 
-<img width="80%" src="/screenshot_1.jpg" />
+<img width="70%" style={{ borderRadius: "10px" }} src="/screenshot_1.jpg" />
