added footer to other pages and updated screenshots on other functionalities, added description about them

--- a/pages/functionality.mdx
+++ b/pages/functionality.mdx
@@ -57,9 +57,18 @@
   <br />
   <img width="100%" style={{ borderRadius: "10px" }} src="/inside_other.png" />
 
-- ### **Access Full Log Tree**
-  -- It will render whole full log tree which is scrollable which shows the tree and commit messages where the \* is on the tree
-  -- Press 'ESC' to exit out of log tree
+1. ### **Access Full Log Tree**
 
-* ### **Stash Changes**
-  -- Will stash all your changes.
+   -- It will render whole full log tree which is scrollable which shows the tree and commit messages where the \* is on the tree
+   -- Press 'ESC' to exit out of log tree
+
+2. ### **Stash Changes**
+
+   -- Will stash all your changes.
+
+3. ### **Undo Stash**
+
+   -- Will undo all your stash on the current branch
+
+4. ### **Undo Commit**
+   -- Will undo your commit on the current branch
